// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Agate-Blade Assassin 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Agate-Blade Assassin",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "attack",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "any",
      "role": "emit",
      "thing": "life-loss",
      "to": "--",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Banishing Light 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Banishing Light",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": "target cond:until_self_leaves cond:nonland",
      "from": "bf",
      "owner": "opp",
      "role": "move",
      "thing": "permanent",
      "to": "exile",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Bellowing Crier 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Bellowing Crier",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "E": {
      "flags": "qty:1",
      "from": "hand",
      "owner": "me",
      "role": "move",
      "thing": "any",
      "to": "gy",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Beza, the Bounding Spring 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
        "E",
        "F",
      ],
      "F": [
        "G",
        "H",
        "I",
      ],
      "I": [
        "J",
        "K",
        "L",
      ],
      "L": [
        "M",
        "N",
        "O",
      ],
    },
  },
  "name": "Beza, the Bounding Spring",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": "qty:=your_lands",
      "from": "--",
      "owner": "me",
      "role": "sensor",
      "thing": "lands",
      "to": "--",
    },
    "E": {
      "flags": "qty:=opp_lands",
      "from": "--",
      "owner": "opp",
      "role": "sensor",
      "thing": "lands",
      "to": "--",
    },
    "F": {
      "flags": "cond:compare=opp_lands>your_lands",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "treasure",
      "to": "bf",
    },
    "G": {
      "flags": "qty:=your_life",
      "from": "--",
      "owner": "me",
      "role": "sensor",
      "thing": "life",
      "to": "--",
    },
    "H": {
      "flags": "qty:=opp_life",
      "from": "--",
      "owner": "opp",
      "role": "sensor",
      "thing": "life",
      "to": "--",
    },
    "I": {
      "flags": "qty:4 cond:compare=opp_life>your_life",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
    "J": {
      "flags": "qty:=your_creatures",
      "from": "--",
      "owner": "me",
      "role": "sensor",
      "thing": "creatures",
      "to": "--",
    },
    "K": {
      "flags": "qty:=opp_creatures",
      "from": "--",
      "owner": "opp",
      "role": "sensor",
      "thing": "creatures",
      "to": "--",
    },
    "L": {
      "flags": "qty:2 cond:compare=opp_creatures>your_creatures",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "fish-1",
      "to": "bf",
    },
    "M": {
      "flags": "qty:=your_cards",
      "from": "--",
      "owner": "me",
      "role": "sensor",
      "thing": "cards",
      "to": "--",
    },
    "N": {
      "flags": "qty:=opp_cards",
      "from": "--",
      "owner": "opp",
      "role": "sensor",
      "thing": "cards",
      "to": "--",
    },
    "O": {
      "flags": "cond:compare=opp_cards>your_cards",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Bonebind Orator 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Bonebind Orator",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{3}{B}",
      "from": "gy",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "exile",
    },
    "D": {
      "flags": "target not:self",
      "from": "gy",
      "owner": "me",
      "role": "move",
      "thing": "creature",
      "to": "hand",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Brave-Kin Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Brave-Kin Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{1} cond:sorcery_speed",
      "from": "bf",
      "owner": "me",
      "role": "tap",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "target lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "any",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Brightblade Stoat 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
    },
  },
  "name": "Brightblade Stoat",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "first strike",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "lifelink",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Builder's Talent 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "E",
      "H",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "E": [
        "F",
      ],
      "F": [
        "G",
      ],
      "H": [
        "I",
      ],
      "I": [
        "J",
      ],
    },
  },
  "name": "Builder's Talent",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "wall-1",
      "to": "bf",
    },
    "E": {
      "flags": "cost:{W} cond:class_level=2",
      "from": "--",
      "owner": "me",
      "role": "becomes",
      "thing": "self",
      "to": "--",
    },
    "F": {
      "flags": "cond:nonland cond:noncreature",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "permanent",
      "to": "stack",
      "trigger-type": "enter",
    },
    "G": {
      "flags": "target cond:delta=+1/+1counter",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "H": {
      "flags": "cost:{4}{W} cond:class_level=3",
      "from": "--",
      "owner": "me",
      "role": "becomes",
      "thing": "self",
      "to": "--",
    },
    "I": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "classlevelgained",
    },
    "J": {
      "flags": "target cond:nonland cond:noncreature",
      "from": "gy",
      "owner": "me",
      "role": "move",
      "thing": "permanent",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Calamitous Tide 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Calamitous Tide",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "qty:0..2 target",
      "from": "bf",
      "owner": "any",
      "role": "move",
      "thing": "creature",
      "to": "hand",
    },
    "D": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "E": {
      "flags": "qty:1",
      "from": "hand",
      "owner": "me",
      "role": "move",
      "thing": "any",
      "to": "gy",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Carrot Cake 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "F",
      "I",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
      "F": [
        "G",
      ],
      "G": [
        "H",
      ],
      "I": [
        "J",
      ],
      "J": [
        "K",
      ],
    },
  },
  "name": "Carrot Cake",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "rabbit-1",
      "to": "bf",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
    "F": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "sacrificed",
    },
    "G": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "rabbit-1",
      "to": "bf",
    },
    "H": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
    "I": {
      "flags": "cost:{2}",
      "from": "bf",
      "owner": "me",
      "role": "tap",
      "thing": "self",
      "to": "bf",
    },
    "J": {
      "flags": undefined,
      "from": "bf",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "K": {
      "flags": "qty:3",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Coruscation Mage 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Coruscation Mage",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{2} cond:token;paid_at_cast;set=1/1",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "cond:noncreature",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "any",
      "to": "stack",
      "trigger-type": "spellcast",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "damage",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Daggerfang Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Daggerfang Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "deathtouch",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "may qty:2",
      "from": "--",
      "owner": "me",
      "role": "source",
      "thing": "any",
      "to": "gy",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Diresight 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
        "D",
      ],
      "D": [
        "E",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Diresight",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "qty:0..2",
      "from": "--",
      "owner": "me",
      "role": "source",
      "thing": "any",
      "to": "gy",
    },
    "D": {
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
    "E": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "F": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-loss",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Dour Port-Mage 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Dour Port-Mage",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "creature",
      "to": "stack",
      "trigger-type": "leaves-without-dying",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "E": {
      "flags": "cost:{1}{U}",
      "from": "bf",
      "owner": "me",
      "role": "tap",
      "thing": "self",
      "to": "bf",
    },
    "F": {
      "flags": "target not:self",
      "from": "bf",
      "owner": "me",
      "role": "move",
      "thing": "creature",
      "to": "hand",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Downwind Ambusher 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        {
          "combine": 1,
          "of": [
            "E",
            "F",
          ],
        },
      ],
    },
  },
  "name": "Downwind Ambusher",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flash",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "target lifetime:turn cond:pt_delta=-1/-1",
      "from": "--",
      "owner": "opp",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "F": {
      "flags": "target cond:was_damaged_this_turn",
      "from": "bf",
      "owner": "opp",
      "role": "move",
      "thing": "creature",
      "to": "gy",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Driftgloom Coyote 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Driftgloom Coyote",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": "target cond:until_self_leaves",
      "from": "bf",
      "owner": "opp",
      "role": "move",
      "thing": "creature",
      "to": "exile",
    },
    "E": {
      "flags": "cond:delta=+1/+1counter;if_targeted_power_le=2",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Feather of Flight 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
      "G",
      "H",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Feather of Flight",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flash",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "target cond:attach;type=creature",
      "from": "--",
      "owner": "me",
      "role": "becomes",
      "thing": "self",
      "to": "--",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "F": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "G": {
      "flags": "cond:equipped;delta=+1/+0",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "H": {
      "flags": "cond:blocked_by=flying_or_reach",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Fell 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
    },
  },
  "name": "Fell",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "target",
      "from": "bf",
      "owner": "any",
      "role": "move",
      "thing": "creature",
      "to": "gy",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Finch Formation 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Finch Formation",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{3} cond:token;paid_at_cast;set=1/1",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "F": {
      "flags": "target lifetime:turn cond:blocked_by=flying_or_reach",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Glidedive Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Glidedive Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "qty:2",
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "life-loss",
      "to": "--",
    },
    "F": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Hazel's Nocturne 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
      "C": [
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Hazel's Nocturne",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "qty:0..2 target",
      "from": "gy",
      "owner": "me",
      "role": "move",
      "thing": "creature",
      "to": "hand",
    },
    "D": {
      "flags": "qty:2",
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "life-loss",
      "to": "--",
    },
    "E": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Hop to It 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
    },
  },
  "name": "Hop to It",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "qty:3",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "rabbit-1",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Intrepid Rabbit 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Intrepid Rabbit",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{1} cond:token;paid_at_cast;set=1/1",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "target lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Iridescent Vinelasher 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Iridescent Vinelasher",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cost:{2} cond:token;paid_at_cast;set=1/1",
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "land",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "target",
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "damage",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Jolly Gerbils 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Jolly Gerbils",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "givegift",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Kitnap 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "F": [
        "G",
      ],
      "G": [
        "H",
      ],
    },
  },
  "name": "Kitnap",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "D": {
      "flags": "target cond:attach;type=creature",
      "from": "--",
      "owner": "me",
      "role": "becomes",
      "thing": "self",
      "to": "--",
    },
    "E": {
      "flags": "cond:equipped",
      "from": "--",
      "owner": "me",
      "role": "becomes",
      "thing": "creature",
      "to": "bf",
    },
    "F": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "G": {
      "flags": "cond:state=tapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "H": {
      "flags": "cond:delta=Stun;gift_not_promised",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Knightfisher 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Knightfisher",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "not:self cond:nontoken",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "bird",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "fish-1",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Lifecreed Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Lifecreed Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "creature",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "life-gain",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Lightshell Duo 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
        "F",
      ],
    },
  },
  "name": "Lightshell Duo",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "prowess",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "qty:0..2",
      "from": "--",
      "owner": "me",
      "role": "source",
      "thing": "any",
      "to": "gy",
    },
    "F": {
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Nightwhorl Hermit 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
    },
  },
  "name": "Nightwhorl Hermit",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "vigilance",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "cond:delta=+1/+0 cond:threshold",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "E": {
      "flags": "cond:unblockable cond:threshold",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Pileated Provisioner 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Pileated Provisioner",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "target cond:withoutflying cond:delta=+1/+1counter",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Plumecreed Escort 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Plumecreed Escort",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flash",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "E": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "enter",
    },
    "F": {
      "flags": "target lifetime:turn cond:grant=hexproof",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Rabbit Response 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Rabbit Response",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "lifetime:turn cond:pt_delta=+2/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "D": {
      "flags": "qty:2 cond:you_control=rabbit",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Seasoned Warrenguard 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Seasoned Warrenguard",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "cond:you_control=token",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "attack",
    },
    "D": {
      "flags": "lifetime:turn cond:pt_delta=+2/+0",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Shore Up 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Shore Up",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "target lifetime:turn cond:pt_delta=+1/+1;grant=hexproof",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "creature",
      "to": "bf",
    },
    "D": {
      "flags": "cond:state=untapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "targeted",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Shrike Force 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
    },
  },
  "name": "Shrike Force",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "double strike",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "E": {
      "flags": "vigilance",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Spellgyre 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        {
          "combine": 1,
          "of": [
            "C",
            "D",
          ],
        },
      ],
      "D": [
        "E",
      ],
      "E": [
        "F",
      ],
    },
  },
  "name": "Spellgyre",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": "target",
      "from": "stack",
      "owner": "any",
      "role": "move",
      "thing": "any",
      "to": "gy",
    },
    "D": {
      "flags": "qty:0..2",
      "from": "--",
      "owner": "me",
      "role": "source",
      "thing": "any",
      "to": "gy",
    },
    "E": {
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
    "F": {
      "flags": "qty:2",
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Starfall Invocation 1`] = `
{
  "flow": {
    "roots": [
      "A",
    ],
    "steps": {
      "A": [
        "B",
        "C",
        "D",
      ],
      "D": [
        "E",
      ],
    },
  },
  "name": "Starfall Invocation",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "stack",
      "owner": "me",
      "role": "move",
      "thing": "self",
      "to": "gy",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "opp",
      "role": "emit",
      "thing": "draw",
      "to": "--",
    },
    "D": {
      "flags": undefined,
      "from": "bf",
      "owner": "any",
      "role": "move",
      "thing": "creature",
      "to": "gy",
    },
    "E": {
      "flags": "cond:gift_promised cond:nontoken",
      "from": "gy",
      "owner": "me",
      "role": "move",
      "thing": "creature",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Thistledown Players 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "D",
      ],
    },
  },
  "name": "Thistledown Players",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "attack",
    },
    "D": {
      "flags": "target cond:state=untapped cond:nonland",
      "from": "--",
      "owner": "any",
      "role": "modifier",
      "thing": "permanent",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Valley Floodcaller 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "E": [
        "F",
        "G",
        "H",
        "I",
      ],
      "F": [
        "J",
        "K",
        "L",
        "M",
      ],
      "G": [
        "J",
        "K",
        "L",
        "M",
      ],
      "H": [
        "J",
        "K",
        "L",
        "M",
      ],
      "I": [
        "J",
        "K",
        "L",
        "M",
      ],
    },
  },
  "name": "Valley Floodcaller",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flash",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "cond:grant=flash_cast cond:noncreature",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "any",
      "to": "--",
    },
    "E": {
      "flags": "cond:noncreature",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "any",
      "to": "stack",
      "trigger-type": "spellcast",
    },
    "F": {
      "flags": "lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "bird",
      "to": "bf",
    },
    "G": {
      "flags": "lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "frog",
      "to": "bf",
    },
    "H": {
      "flags": "lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "otter",
      "to": "bf",
    },
    "I": {
      "flags": "lifetime:turn cond:pt_delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "rat",
      "to": "bf",
    },
    "J": {
      "flags": "cond:state=untapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "bird",
      "to": "bf",
    },
    "K": {
      "flags": "cond:state=untapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "frog",
      "to": "bf",
    },
    "L": {
      "flags": "cond:state=untapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "otter",
      "to": "bf",
    },
    "M": {
      "flags": "cond:state=untapped",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "rat",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Valley Questcaller 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "H",
      "I",
      "J",
      "K",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "C": [
        "G",
      ],
      "D": [
        "G",
      ],
      "E": [
        "G",
      ],
      "F": [
        "G",
      ],
    },
  },
  "name": "Valley Questcaller",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "rabbit",
      "to": "stack",
      "trigger-type": "enter",
    },
    "D": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "bat",
      "to": "stack",
      "trigger-type": "enter",
    },
    "E": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "bird",
      "to": "stack",
      "trigger-type": "enter",
    },
    "F": {
      "flags": "not:self",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "mouse",
      "to": "stack",
      "trigger-type": "enter",
    },
    "G": {
      "flags": undefined,
      "from": "--",
      "owner": "me",
      "role": "emit",
      "thing": "library-look",
      "to": "--",
    },
    "H": {
      "flags": "not:self cond:delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "rabbit",
      "to": "bf",
    },
    "I": {
      "flags": "not:self cond:delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "bat",
      "to": "bf",
    },
    "J": {
      "flags": "not:self cond:delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "bird",
      "to": "bf",
    },
    "K": {
      "flags": "not:self cond:delta=+1/+1",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "mouse",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;

exports[`BLB examiner-verified cards (forge -> parse -> synergy snapshot) > Wax-Wane Witness 1`] = `
{
  "flow": {
    "roots": [
      "A",
      "B",
      "C",
      "D",
      "E",
      "G",
    ],
    "steps": {
      "A": [
        "B",
      ],
      "E": [
        "F",
      ],
      "G": [
        "H",
      ],
    },
  },
  "name": "Wax-Wane Witness",
  "nodes": {
    "A": {
      "from": "hand",
      "owner": "me",
      "role": "cast",
      "thing": "self",
      "to": "stack",
    },
    "B": {
      "from": "--",
      "owner": "me",
      "role": "enters",
      "thing": "self",
      "to": "bf",
    },
    "C": {
      "flags": "flying",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "D": {
      "flags": "vigilance",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "E": {
      "flags": "cond:your_turn",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "lifegained",
    },
    "F": {
      "flags": "lifetime:turn cond:pt_delta=+1/+0",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
    "G": {
      "flags": "cond:your_turn",
      "from": "--",
      "owner": "me",
      "role": "trigger",
      "thing": "self",
      "to": "stack",
      "trigger-type": "lifelost",
    },
    "H": {
      "flags": "lifetime:turn cond:pt_delta=+1/+0",
      "from": "--",
      "owner": "me",
      "role": "modifier",
      "thing": "self",
      "to": "bf",
    },
  },
  "unmapped": [],
}
`;
